src/scss/style.scss
.map {
  height: 500px;
}

.notification.is-flash {
  height: 0;
  opacity: 0;
  transition: all 1s;


  &.is-active {
    height: 65px;
    opacity: 1;
  }
}

.fa-hand-o-up {
  color: green;
}

.fa-hand-o-down {
  color: red;
}

div.hero-body {
  background-image: url('https://farm5.staticflickr.com/4759/39952554431_e872ce68b1_h.jpg');
  background-position: center;
}

  .Maincontainer {
    background-color: rgba(0,0,0,0.5);

}

